tests/analyze/list-pattern-exhaustive-missing/analyze.snap
---
source: tests/analyze.rs
expression: output
---
error: Non-exhaustive `when`: missing case for `[]`.
> 6 | 	when xs is [n, ...] {
       ^^^^^^^^^^^^^^^^^^^^^

